--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "fakerphp/faker": "^1.9.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "spatie/laravel-permission": "^5.5",
-        "fakerphp/faker": "^1.9.1"
+        "php-open-source-saver/jwt-auth": "^1.4",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
