--- a/package.json
+++ b/package.json
@@ -2,13 +2,42 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "ckeditor": "webpack --mode production"
     },
     "devDependencies": {
+        "@ckeditor/ckeditor5-basic-styles": "^35.1.0",
+        "@ckeditor/ckeditor5-dev-utils": "^30.4.0",
+        "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.4.0",
+        "@ckeditor/ckeditor5-editor-classic": "^35.1.0",
+        "@ckeditor/ckeditor5-essentials": "^35.1.0",
+        "@ckeditor/ckeditor5-find-and-replace": "^35.1.0",
+        "@ckeditor/ckeditor5-font": "^35.1.0",
+        "@ckeditor/ckeditor5-heading": "^35.1.0",
+        "@ckeditor/ckeditor5-horizontal-line": "^35.1.0",
+        "@ckeditor/ckeditor5-image": "^35.1.0",
+        "@ckeditor/ckeditor5-indent": "^35.1.0",
+        "@ckeditor/ckeditor5-link": "^35.1.0",
+        "@ckeditor/ckeditor5-list": "^35.1.0",
+        "@ckeditor/ckeditor5-media-embed": "^35.1.0",
+        "@ckeditor/ckeditor5-paragraph": "^35.1.0",
+        "@ckeditor/ckeditor5-paste-from-office": "^35.1.0",
+        "@ckeditor/ckeditor5-remove-format": "^35.1.0",
+        "@ckeditor/ckeditor5-table": "^35.1.0",
+        "@ckeditor/ckeditor5-theme-lark": "^35.1.0",
+        "@ckeditor/ckeditor5-typing": "^35.1.0",
+        "@ckeditor/ckeditor5-upload": "^35.1.0",
         "axios": "^0.27",
+        "css-loader": "^5.2.7",
         "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "vite": "^3.0.0"
+        "postcss-loader": "^4.3.0",
+        "raw-loader": "^4.0.2",
+        "style-loader": "^2.0.0",
+        "terser-webpack-plugin": "^4.2.3",
+        "vite": "^3.0.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
     }
 }
